--- a/index.html
+++ b/index.html
@@ -5,18 +5,201 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>new web site </title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/2ad501d032.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <div>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-  </nav>
+  <header>
+    <nav class="menu">
+      <div >
+        <h2> Influencer Product  </h2>
+      </div>
+      <div>
+        <ul class="navigation">
+          <li><a href="">HOME</a></li>
+          <li><a href="">PRODUCTS</a></li>
+          <li><a href="">SIGN UP</a></li>
+          <li><a href="">LOG IN </a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="container">
+      <div class="section-1">
+        <div class="information">
+          <h1>Start your Journey As Influencer </h1>
+          <p>The World’s largest influencer marketing platform. When we work, we think. We are that unmistakable bridge linking Brands and Influencers. Strong Marketing campaigns, with sharp strategy are our forte. We know quite well what brands need, as we also know very well which influencers will fit in.</p>
+          <a class="anchor" href="">Preebook Now <i class="fas fa-sign-in-alt"></i> </a>
+        </div>
+        <div class="photo">
+          <img src="influencer-gear-main\images\main-camera.png" alt="">
+        </div>
+      </div>
+      </section>
+      <section class="container-2" >
+        <h3 class="caption">Popular Collection </h3>
+        <div class="section-2">
+          <div class="tripod">
+            <div class="img">
+           <img src="influencer-gear-main\images\tripod.png" alt="">
+            </div>
+            <div class="info">
+              <h2>Flex Tripod </h2>
+              <h3>$50.47</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5.0</span>
+              <p>Worldwide shifting available </p>
+            </div>
+          </div>
+          <div class="microphone">
+            <div class="img">
+           <img src="influencer-gear-main\images\mic.png" alt="">
+            </div>
+            <div class="info">
+              <h2>Microphone </h2>
+              <h3>$50.47</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5.0</span>
+              <p>Worldwide shifting available </p>
+            </div>
+          </div>
+          <div class="airbuds">
+            <div class="img">
+           <img src="influencer-gear-main\images\airpod.png" alt="">
+            </div>
+            <div class="info">
+              <h2> Airbuds </h2>
+              <h3>$50.47</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5.0</span>
+              <p>Worldwide shifting available </p>
+            </div>
+          </div>
+          <div class=" drone ">
+            <div class="img">
+           <img src="influencer-gear-main\images\drone.png" alt="">
+            </div>
+            <div class="info">
+              <h2> Drone </h2>
+              <h3>$50.47</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5.0</span>
+              <p>Worldwide shifting available </p>
+            </div>
+          </div>
+          <div class="light setup">
+            <div class="img">
+           <img src="influencer-gear-main\images\lights.png" alt="">
+            </div>
+            <div class="info">
+              <h2> Light setup </h2>
+              <h3>$50.47</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5.0</span>
+              <p>Worldwide shifting available </p>
+            </div>
+          </div>
+          <div class="photoshoot set ">
+            <div class="img">
+           <img src="influencer-gear-main\images\setup.png" alt="">
+            </div>
+            <div class="info">
+              <h2> Photoshoot Set </h2>
+              <h3>$50.47</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5.0</span>
+              <p>Worldwide shifting available </p>
+            </div>
+          </div>
+          <div class="vlogging camera">
+            <div class="img">
+           <img src="influencer-gear-main\images\camera.png" alt="">
+            </div>
+            <div class="info">
+              <h2>Vlogging Camera</h2>
+              <h3>$50.47</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5.0</span>
+              <p>Worldwide shifting available </p>
+            </div>
+          </div>
+          <div class="green screen">
+            <div class="img">
+           <img src="influencer-gear-main\images\single-light.png" alt="">
+            </div>
+            <div class="info">
+              <h2>Green Screen </h2>
+              <h3>$50.47</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5.0</span>
+              <p>Worldwide shifting available </p>
+            </div>
+          </div>
+          <div class="action camera">
+            <div class="img">
+           <img src="influencer-gear-main\images\action.png" alt="">
+            </div>
+            <div class="info">
+              <h2>Action Camera </h2>
+              <h3>$50.47</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5.0</span>
+              <p>Worldwide shifting available </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      
+      
+  </main>
 </body>
 </html>
