--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
       <div class="section-1">
         <div class="information">
           <h1>Start your Journey As Influencer </h1>
-          <p>The World’s largest influencer marketing platform. When we work, we think. We are that unmistakable bridge linking Brands and Influencers. Strong Marketing campaigns, with sharp strategy are our forte. We know quite well what brands need, as we also know very well which influencers will fit in.</p>
+          <p>The World’s largest influencer marketing platform.
+             When we work, we think. We are that unmistakable
+              bridge linking Brands and Influencers. Strong 
+              Marketing campaigns, with sharp strategy are our
+               forte. We know quite well what brands need, as 
+               we also know very well which influencers will fit in.</p>
           <a class="anchor" href="">Preebook Now <i class="fas fa-sign-in-alt"></i> </a>
         </div>
         <div class="photo">
@@ -43,7 +48,7 @@
       <section class="container-2" >
         <h3 class="caption">Popular Collection </h3>
         <div class="section-2">
-          <div class="tripod">
+          <div class="product-list">
             <div class="img">
            <img src="influencer-gear-main\images\tripod.png" alt="">
             </div>
@@ -60,7 +65,7 @@
               <p>Worldwide shifting available </p>
             </div>
           </div>
-          <div class="microphone">
+          <div class="product-list">
             <div class="img">
            <img src="influencer-gear-main\images\mic.png" alt="">
             </div>
@@ -77,7 +82,7 @@
               <p>Worldwide shifting available </p>
             </div>
           </div>
-          <div class="airbuds">
+          <div class="product-list">
             <div class="img">
            <img src="influencer-gear-main\images\airpod.png" alt="">
             </div>
@@ -94,7 +99,7 @@
               <p>Worldwide shifting available </p>
             </div>
           </div>
-          <div class=" drone ">
+          <div class=" product-list">
             <div class="img">
            <img src="influencer-gear-main\images\drone.png" alt="">
             </div>
@@ -111,7 +116,7 @@
               <p>Worldwide shifting available </p>
             </div>
           </div>
-          <div class="light setup">
+          <div class="product-list">
             <div class="img">
            <img src="influencer-gear-main\images\lights.png" alt="">
             </div>
@@ -128,7 +133,7 @@
               <p>Worldwide shifting available </p>
             </div>
           </div>
-          <div class="photoshoot set ">
+          <div class="product-list ">
             <div class="img">
            <img src="influencer-gear-main\images\setup.png" alt="">
             </div>
@@ -145,7 +150,7 @@
               <p>Worldwide shifting available </p>
             </div>
           </div>
-          <div class="vlogging camera">
+          <div class="product-list">
             <div class="img">
            <img src="influencer-gear-main\images\camera.png" alt="">
             </div>
@@ -162,7 +167,7 @@
               <p>Worldwide shifting available </p>
             </div>
           </div>
-          <div class="green screen">
+          <div class="product-list">
             <div class="img">
            <img src="influencer-gear-main\images\single-light.png" alt="">
             </div>
@@ -179,7 +184,7 @@
               <p>Worldwide shifting available </p>
             </div>
           </div>
-          <div class="action camera">
+          <div class="product-list">
             <div class="img">
            <img src="influencer-gear-main\images\action.png" alt="">
             </div>
