--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       </div>
   </main>
   <footer class="social-media">
-    <div class="note">
+    <div class="notice">
       <h3>Influencer products </h3>
       <p>Copyright © 2020  influencer products</p>
       <span>All rights reserved</span> <br>
