--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
           </div>
         </div>
       </section>
-      <div class="container-3">
+      <section class="container-3">
         <div class="new-product">
-         <img src="influencer-gear-main\images\gear.png" alt="">
+         <img src="influencer-gear-main\images\1000_F_282677806_Kqw6MvwVD2SZbassHuU0Q3peH0dSm5fx.jpg">
         </div>
         <div class="product-info">
           <h2>Upcoming new collection </h2>
           <p>Many Products are comming soon in our shop .you can buy other product in our shop few days later ...</p><br>
           <a class="anchor-2" href="">More Details <i class="fas fa-sign-in-alt"></i></a>
         </div>
-      </div>
+      </section>
   </main>
   <footer class="social-media">
     <div class="notice">
