compleate all bugg

--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
   <footer class="social-media">
     <div class="notice">
       <h3>Influencer products </h3>
-      <p>Copyright © 2020  influencer products</p>
-      <span>All rights reserved</span> <br>
+      <h3>Copyright © 2020  influencer products</h3>
+      <h3>All rights reserved</h3>
     </div>
-    <div>
+    <div class="join">
       <i class="join fab fa-instagram-square"></i>
       <i class=" join fab fa-facebook"></i>
       <i class=" join fab fa-twitter-square"></i>
